<resources>
    <string name="app_name">SkyAfra</string>
    <string name="nav_open" translatable="false">Open Navigation Drawer</string>
    <string name="nav_close" translatable="false">Close Navigation Drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="started_title">Hello!</string>
    <string name="started_sub_title"><p>Welcome to SkyAfra App, Nice to meet you!</p>
        <p><br><b>Please Login or Register</b></br></p>
    </string>
    <string name="illustration_image" translatable="false">Illustration Image</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="login_title">Login To SkyAfra</string>
    <string name="login_sub_title">
        Login if you already have an account.
    </string>
    <string name="login_email">Your email</string>
    <string name="login_password">Your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_havent_account">
        Don\'t have an account? <b>Register</b>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        Register to get started with the app.
    </string>
    <string name="register_fullname">Your fullname</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_confirm_password">Confirm your password</string>
    <string name="register_have_account">
        Already have an account? <b>Login</b>
    </string>
    <string name="btn_logout">Logout</string>
    <string name="organic">Organic</string>
    <string name="non_organic">Non Organic</string>
    <string name="home">Home</string>
    <string name="how_to">How To</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="about_organic">About Biodegradable</string>
    <string name="about_non_organic">About Non Biodegradable</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="change">Change</string>
    <string name="tip_language">Please change the language on your phone to change the language.</string>
    <string name="tip_register">Please use portrait mode to register.</string>
    <string name="camera">Camera</string>
    <string name="camerax">CameraX</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="to_main_feature">To Main Feature</string>
    <string name="date_and_time" translatable="false">Date and Time</string>
    <string name="welcome">Welcome</string>
    <string name="illustration_image_home" translatable="false">illustration image home</string>
    <string name="open_camera">Open Camera</string>
    <string name="tips_scan">Click the Button to Start Scanning</string>
    <string name="tips_waste">Want to know the types of waste?</string>
    <string name="tips_about">Information About Us</string>
    <string name="title1">Biodegradable</string>
    <string name="content_text">Biodegradable is the property of a material or product that can be broken down naturally by microorganisms such as bacteria or fungi into simpler substances such as water, carbon dioxide, and biomass. This decomposition process usually occurs in a natural environment or under certain conditions such as composting. biodegradable materials are a more environmentally friendly alternative</string>
    <string name="bio_type">Types of Biodegradable Materials</string>
    <string name="natural_Bio">Natural Biodegradable</string>
    <string name="title2">Non Biodegradable</string>
    <string name="content_text2">Non-biodegradable refers to materials or substances that cannot be broken down by natural microorganisms such as bacteria or fungi. This means that the material will not break down and decompose into basic harmless materials in the environment within a reasonable period of time. As a result, non-biodegradable materials can remain in the environment for years or even centuries, causing pollution and other environmental problems.</string>
    <string name="title3" translatable="false">SkyAfra</string>
    <string name="kelompok">Member\'s name:</string>
    <string name="Nama1" translatable="false">1. Ken Anargya Alkausar (C004D4KY0771) - Cloud Computing - Institut Teknologi Sepuluh Nopember</string>
    <string name="Nama2" translatable="false">2. Revanantyo Dwigantara (M004D4KY2352) - Machine Learning - Institut Teknologi Sepuluh Nopember</string>
    <string name="Nama3" translatable="false">3. Andreas Fernandez Wauran (M314D4KY2766) - Machine Learning - Universitas Singaperbangsa Karawang</string>
    <string name="Nama4" translatable="false">4. Adrian Ismu Arifianto (C004D4KY0984) - Cloud Computing - Institut Teknologi Sepuluh Nopember</string>
    <string name="Nama5" translatable="false">5. Saffanah Nur Fadilla (M270D4KX3151) - Machine Learning - Universitas Mulia</string>
    <string name="Nama6" translatable="false">6. Yopira Eka Putra (A270D4KY4520) - Mobile Development - Universitas Mulia</string>
    <string name="Nama7" translatable="false">7. Fardilla Bara Hidayah (A270D4KY4532) - Mobile Development - Universitas Mulia</string>
    <string name="user_name" translatable="false">nama_user</string>
    <string name="email" translatable="false">email</string>
    <string name="about_skyarfa">SkyAfra - An App to Help People Sort Their WasteBiodegradable waste management has become an important concern in the context of sustainable waste management and environmental conservation recent advances in technology for detecting biodegradable waste in various environments. with identifying and separating biodegradable waste from other waste streams. It then explores emerging technological solutions to overcome these challenges, including computer vision-based systems, artificial intelligence (AI) algorithms, and machine learning (ML) techniques.</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="result_header">Result</string>
    <string name="explanation_header">Explanation</string>
    <string name="result" translatable="false">Result</string>
    <string name="explanation" translatable="false">Explanation</string>
    <string name="suggestion" translatable="false">Suggestion</string>
    <string name="suggestion_header">Suggestion</string>
    <string name="back">Return</string>
    <string name="natural_text">Natural biodegradable materials are organic materials made from natural materials such as wood fiber, paper, and vegetables. These materials are biodegradable and can be decomposed by microorganisms in nature in a relatively short period of time.</string>
    <string name="synthetic_bio">Biodegradable Synthetic</string>
    <string name="synthetic_text">Synthetic biodegradable materials are man-made materials made from synthetic chemicals, such as poly lactate (PLA) or polyhydroxy alkanoate (PHA). These materials are designed to biodegrade under certain environmental conditions and can be broken down by microorganisms such as bacteria and fungi.</string>
    <string name="oxo_bio">Oxodegradable</string>
    <string name="oxo_text">Oxodegradable materials are synthetic materials that contain chemicals that make them break down easily when exposed to sunlight or heat. However, they can still leave behind small particles that are difficult to break down and harmful to the environment.</string>
    <string name="photo_bio">Photodegradable</string>
    <string name="photo_text">Photodegradable materials are synthetic materials that break down through exposure to ultraviolet light or light. However, they can still leave behind small particles that are difficult to break down and harmful to the environment.</string>
    <string name="pro_bio">Programmatic biodegradable</string>
    <string name="pro_text">Programmed biodegradable materials are synthetic materials that have been designed to break down under controlled environmental conditions, such as under compostable conditions or within a sewage treatment plant.</string>
    <string name="example_bio">Example of Biodegradable</string>
    <string name="organic_leftovers">Organic Leftovers</string>
    <string name="paper">Paper or Cardboard</string>
    <string name="straw">Straw</string>
    <string name="benefits_bio">Benefits of Biodegradable for the Environment</string>
    <string name="benefit1">1. Reducing Waste in Landfill</string>
    <string name="benefit2">2. Reduce Negative Impact on the Environment</string>
    <string name="benefit3">3. Improve Groundwater Quality</string>
    <string name="benefit4">4. Supports Sustainable Life Cycle</string>
    <string name="coffee">Coffee Powder</string>
    <string name="leaves">Leaves</string>
    <string name="positif">Positive</string>
    <string name="negatif">Negative</string>
    <string name="benefit5">1. Imperfect Decomposition</string>
    <string name="benefit6">2. Resource-intensive Production</string>
    <string name="benefit7">3. Potential Contamination</string>
    <string name="benefit8">4. Limited Decomposition Conditions</string>
    <string name="nonbio_type">Types of Non Biodegradable</string>
    <string name="soft_nonbio">Soft Waste</string>
    <string name="soft_text">This type of waste is waste or waste that is soft or flexible and easy to shape. For example, plastic waste, styrofoam, fast food wrappers. In addition, there are also liquid ones, such as used detergent water, soap water, cooking oil and so on.</string>
    <string name="hard_nonbio">Hard Waste</string>
    <string name="hard_text">This type of waste is easily destroyed because it contains strong materials. This waste can only be destroyed by certain destruction methods, such as heating or burning. The examples are broken glass, ceramics, rusty nails, and used cans.</string>
    <string name="examples_nonbio">Examples of non-biodegradable</string>
    <string name="plastic">Plastic Bottle</string>
    <string name="tires">Used Tires</string>
    <string name="glass">Glass Waste</string>
    <string name="metal">Metal Waste</string>
    <string name="e_waste">Electronic Waste</string>
    <string name="benefits_nonbio">Benefits of Non-biodegradable to the Environment</string>
    <string name="benefit9">1. Durability and Sustainability</string>
    <string name="benefit10">2. Economy and Efficiency</string>
    <string name="benefit11">3. Flexibility in Design and Application</string>
    <string name="benefit12">4. Health and Safety Benefits</string>
    <string name="benefit13">1. Environmental Pollution</string>
    <string name="benefit14">2. Waste and Landfill Issues</string>
    <string name="benefit15">3. Impact on Wildlife</string>
    <string name="benefit16">4. Global Warming and Emissions</string>
    <string name="tutorial">How to using SkyAfra app</string>
    <string name="tutor1">1. On the main page click the camera button to start</string>
    <string name="tutor2">2. Select take a picture from the gallery or take a picture from the camera</string>
    <string name="tutor3">3. After the image appears click upload to start scanning, wait until the process is complete and the results will appear immediately.</string>
    <string name="tutorial2">How to view SkyAfra app history</string>
    <string name="tutor4">1. To view history click the history button</string>
    <string name="tutor5">2. Topmost is the latest scanning result</string>
    <string name="date_and_time_header">Date and Time</string>
    <string name="history">History</string>
    <string name="camera_icon" translatable="false">Camera Icon</string>
    <string name="bio_icon" translatable="false">Bio Icon</string>
    <string name="nonbio_ico" translatable="false">NonBio Ico</string>
</resources>