<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment2">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/img_illustration_started"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/illustration_image_home"
        android:src="@drawable/home_peoplecleaning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_gravity="left"
        android:layout_marginVertical="80dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/dateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:layout_marginRight="10dp"
        android:text="@string/date_and_time"
        android:textSize="16sp"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="340dp"
        android:gravity="center"
        android:text="@string/tips_scan"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:gravity="center"
        android:text="@string/tips_waste"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="645dp"
        android:gravity="center"
        android:text="@string/tips_about"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_camera"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="450dp"
        android:background="@drawable/stylebtn1"
        android:text="@string/open_camera"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <ImageView
        android:id="@+id/icon_camera"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="365dp"
        android:contentDescription="@string/camera_icon"
        android:src="@drawable/cameraicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_nonorganic"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:layout_gravity="right"
        android:textColor="@color/white"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/stylebtn1"
        android:text="@string/about_non_organic"
        android:textAllCaps="false"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/bio_icon"
        android:layout_width="76dp"
        android:layout_height="90dp"
        android:layout_gravity="left"
        android:layout_marginStart="65dp"
        android:layout_marginTop="515dp"
        android:contentDescription="@string/bio_icon"
        android:src="@drawable/bioicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_organic"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:layout_gravity="left"
        android:layout_marginStart="45dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/stylebtn1"
        android:text="@string/about_organic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/nonbio_icon"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_gravity="right"
        android:layout_marginEnd="65dp"
        android:layout_marginTop="515dp"
        android:contentDescription="@string/nonbio_ico"
        android:src="@drawable/nonbioicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_about"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:textColor="@color/white"
        android:layout_marginTop="685dp"
        android:layout_gravity="top|center"
        android:background="@drawable/stylebtn1"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textSize="12sp"/>

</FrameLayout>