<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light"
        android:orientation="vertical"
        android:padding="8dp" >

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="14sp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/explanationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation"
        android:textSize="14sp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/suggestionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textSize="14sp"
        android:padding="5dp"/>

        <TextView
            android:id="@+id/createAtTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/date_and_time"
            android:textSize="14sp"
            android:padding="5dp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>